[package]
name = "tromic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
reqwest = { version = "0.11.18", default-features = false, features = [
  "rustls-tls",
  "json",
] }
axum = { version = "0.6.20", features = ["tracing"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"       
tokio = { version = "1.36.0", features = ["full"] }
futures-util = "0.3"
